Now catches fringe cases such as missing start or end vertex; implemented memory-leak failsafe

--- a/Almost Shortest Path/Almost Shortest Path/Properties/launchSettings.json
+++ b/Almost Shortest Path/Almost Shortest Path/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Almost Shortest Path": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "\"C:\\Users\\jbesl\\Downloads\\INPUT.txt\""
     }
   }
 }
