--- a/Almost Shortest Path/Almost Shortest Path/Properties/launchSettings.json
+++ b/Almost Shortest Path/Almost Shortest Path/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Almost Shortest Path": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\jbesl\\Downloads\\INPUT.txt\""
+      "commandLineArgs": "\"C:\\Users\\jbesl\\Downloads\\AlmostShortestPath\\test-1.txt\""
     }
   }
 }
