Rewrote the algorithm to more closely match the original implementation and generally clean things up

--- a/Almost Shortest Path/Almost Shortest Path/Properties/launchSettings.json
+++ b/Almost Shortest Path/Almost Shortest Path/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Almost Shortest Path": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\jbesl\\Downloads\\AlmostShortestPath\\INPUT.txt\""
+      "commandLineArgs": "\"C:\\Users\\jbesl\\Downloads\\AlmostShortestPathProgram\\DEBUG_INPUT.txt\""
     }
   }
 }
